--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,7 +4,6 @@
     "license": "MIT",
     "type": "module",
     "main": "dist/index.js",
-    "types": "dist/index.js",
     "scripts": {
         "build": "npm run clean && npm run compile",
         "clean": "rm -rf ./dist",
@@ -15,7 +14,7 @@
     },
     "dependencies": {
         "@apollo/server": "^4.4.1",
-        "@graphql-tools/schema": "9.0.16",
+        "@graphql-tools/schema": "^9.0.17",
         "@people-eat/server-domain": "*",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
@@ -25,8 +24,8 @@
         "graphql-scalars": "^1.20.1",
         "graphql-subscriptions": "^2.0.0",
         "graphql-upload": "^16.0.2",
-        "graphql-ws": "^5.11.2",
-        "ws": "8.12.1"
+        "graphql-ws": "^5.12.0",
+        "ws": "^8.12.1"
     },
     "devDependencies": {
         "@babel/core": "^7.21.0",
