--- a/.npmcheckrc.json
+++ b/.npmcheckrc.json
@@ -1,5 +1,11 @@
 {
     "depcheck": {
-        "ignoreMatches": ["prettier-plugin-organize-imports", "sort-package-json"]
+        "ignoreMatches": [
+            "prettier-plugin-organize-imports",
+            "sort-package-json",
+            "@types/node",
+            "ts-node",
+            "typescript"
+        ]
     }
 }
