--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,9 @@
                 "no-duplicate-imports": "error",
                 "spaced-comment": "error",
                 "no-inline-comments": "error",
-                "@typescript-eslint/naming-convention": ["error", { "selector": "variableLike", "format": ["camelCase"] }],
+                "@typescript-eslint/naming-convention": ["error", { "selector": "variableLike", "modifiers": ["unused"], "leadingUnderscore": "require", "format": ["camelCase"] }],
                 "@typescript-eslint/no-shadow": "error",
+                "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
                 "no-alert": "error",
                 "@typescript-eslint/explicit-function-return-type": "error",
                 "@typescript-eslint/array-type": "error",
