--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "npm-check": "npm-check -i @people-eat/*",
         "npm-check-all": "nx run-many --target=npm-check && yarn npm-check",
         "start": "node --loader ts-node/esm packages/adapter-host-development/src/index.ts",
-        "start:prod": "node packages/adapter-host-development/dist/index.js"
+        "start:prod": "node packages/adapter-host-development/dist/index.js",
+        "format": "prettier --write ."
     },
     "dependencies": {},
     "devDependencies": {
