--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,14 +4,5 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
-    "cSpell.words": [
-        "codepaths",
-        "datetime",
-        "jwks",
-        "tinyint",
-        "tsbuildinfo",
-        "twilio",
-        "typedef",
-        "typeorm"
-    ]
+    "cSpell.words": ["codepaths", "datetime", "jwks", "tinyint", "tsbuildinfo", "twilio", "typedef", "typeorm"]
 }
