--- a/packages/app/graphql-codegen.yaml
+++ b/packages/app/graphql-codegen.yaml
@@ -1,12 +1,12 @@
-schema: "src/**/*.graphql"
+schema: 'src/**/*.graphql'
 hooks:
     afterAllFileWrite:
         - prettier --write
 generates:
     ./src/generated.ts:
         plugins:
-            - "typescript"
-            - "typescript-resolvers"
+            - 'typescript'
+            - 'typescript-resolvers'
         config:
             contextType: '@people-eat/server-domain/src/authorization#Context'
             typesPrefix: GQL
