--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "scripts": {
         "build": "nx run-many --target=build",
         "graph": "nx graph",
-        "postinstall": "sort-package-json package.json packages/**/package.json && yarn npm-check-all",
         "lint": "eslint packages/**/**.ts",
         "npm-check": "npm-check -i @people-eat/*",
         "npm-check-all": "nx run-many --target=npm-check && yarn npm-check",
         "start": "node --loader ts-node/esm packages/adapter-host-development/src/index.ts",
         "start:prod": "node packages/adapter-host-development/dist/index.js",
-        "format": "prettier --write ."
+        "sort:package:json": "sort-package-json package.json packages/**/package.json",
+        "format": "prettier --write .",
+        "verify": "yarn build"
     },
     "dependencies": {},
     "devDependencies": {
