chore: set engine to node 19 and forbid npm

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     },
     "workspaces": [
         "packages/*"
-    ]
+    ],
+    "engines": {
+        "node": "^20.0.0",
+        "npm": "please-use-yarn"
+    }
 }
