--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-    "recommendations": ["davidanson.vscode-markdownlint", "editorconfig.editorconfig", "nrwl.angular-console"]
+    "recommendations": ["davidanson.vscode-markdownlint", "editorconfig.editorconfig", "nrwl.angular-console", "streetsidesoftware.code-spell-checker"]
 }
