--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     },
     "license": "UNLICENSED",
     "private": true,
-    "scripts": {},
+    "scripts": {
+        "spell:check": "cspell . --no-progress"
+    },
     "dependencies": {
         "tslib": "^2.5.0"
     },
@@ -20,6 +22,7 @@
         "@nrwl/node": "^15.9.2",
         "@nrwl/workspace": "15.9.2",
         "@types/node": "^18.15.11",
+        "cspell": "^6.31.1",
         "esbuild": "^0.17.16",
         "nx": "15.9.2",
         "typescript": "^4.9.5"
