chore: setup prettier

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-    "recommendations": ["davidanson.vscode-markdownlint", "editorconfig.editorconfig", "nrwl.angular-console", "streetsidesoftware.code-spell-checker"]
+    "recommendations": [
+        "davidanson.vscode-markdownlint",
+        "editorconfig.editorconfig",
+        "esbenp.prettier-vscode",
+        "nrwl.angular-console",
+        "streetsidesoftware.code-spell-checker"
+    ]
 }
