--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
         "spell:check": "cspell . --no-progress"
     },
     "dependencies": {
@@ -25,6 +27,7 @@
         "cspell": "^6.31.1",
         "esbuild": "^0.17.16",
         "nx": "15.9.2",
+        "prettier": "^2.8.7",
         "typescript": "^4.9.5"
     },
     "workspaces": [
