--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "scripts": {
         "format": "prettier --write .",
         "format:check": "prettier --check .",
+        "lint": "eslint . --ext js,cjs,mjs,ts,cts,mts --fix",
+        "lint:check": "eslint . --ext js,cjs,mjs,ts,cts,mts",
         "spell:check": "cspell . --no-progress"
     },
     "dependencies": {
@@ -24,8 +26,13 @@
         "@nrwl/node": "^15.9.2",
         "@nrwl/workspace": "15.9.2",
         "@types/node": "^18.15.11",
+        "@typescript-eslint/eslint-plugin": "^5.58.0",
+        "@typescript-eslint/parser": "^5.58.0",
         "cspell": "^6.31.1",
         "esbuild": "^0.17.16",
+        "eslint": "^8.38.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "nx": "15.9.2",
         "prettier": "^2.8.7",
         "prettier-plugin-organize-imports": "^3.2.2",
