--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
-    "ignorePatterns": ["dist", "tmp"],
+    "ignorePatterns": ["dist", "tmp", "jest.preset.js"],
     "overrides": [
         {
             "files": ["*.js", "*.mjs", "*.cjs", "*.ts", "*.mts", "*.cts"],
