--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "devDependencies": {
         "@babel/core": "^7.12.0",
         "@nrwl/esbuild": "^15.9.2",
+        "@nrwl/jest": "15.9.2",
         "@nrwl/js": "15.9.2",
         "@nrwl/node": "^15.9.2",
         "@nrwl/workspace": "15.9.2",
+        "@types/jest": "^29.4.0",
         "@types/node": "^18.15.11",
         "@typescript-eslint/eslint-plugin": "^5.58.0",
         "@typescript-eslint/parser": "^5.58.0",
@@ -33,9 +35,13 @@
         "eslint": "^8.38.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "jest": "^29.4.1",
+        "jest-environment-node": "^29.4.1",
         "nx": "15.9.2",
         "prettier": "^2.8.7",
         "prettier-plugin-organize-imports": "^3.2.2",
+        "ts-jest": "^29.0.5",
+        "ts-node": "10.9.1",
         "typescript": "^4.9.5"
     },
     "workspaces": [
