--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@nrwl/jest": "15.9.2",
         "@nrwl/js": "15.9.2",
         "@nrwl/node": "^15.9.2",
+        "@nrwl/nx-cloud": "^15.3.5",
         "@nrwl/workspace": "15.9.2",
         "@types/jest": "^29.4.0",
         "@types/node": "^18.15.11",
