--- a/packages/app-apollo-server/package.json
+++ b/packages/app-apollo-server/package.json
@@ -11,5 +11,10 @@
     "license": "UNLICENSED",
     "private": true,
     "version": "0.0.0",
-    "dependencies": {}
+    "dependencies": {
+        "@apollo/server": "^4.6.0",
+        "@graphql-tools/load-files": "^6.6.1",
+        "@graphql-tools/schema": "^9.0.17",
+        "graphql": "^16.6.0"
+    }
 }
