--- a/packages/app-apollo-server/package.json
+++ b/packages/app-apollo-server/package.json
@@ -11,10 +11,18 @@
     "license": "UNLICENSED",
     "private": true,
     "version": "0.0.0",
+    "scripts": {
+        "generate:graphql": "gql-gen --config graphql-codegen.yaml"
+    },
     "dependencies": {
         "@apollo/server": "^4.6.0",
         "@graphql-tools/load-files": "^6.6.1",
         "@graphql-tools/schema": "^9.0.17",
         "graphql": "^16.6.0"
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "^3.3.0",
+        "@graphql-codegen/typescript": "^3.0.3",
+        "@graphql-codegen/typescript-resolvers": "^3.2.0"
     }
 }
