--- a/packages/app-apollo-server/package.json
+++ b/packages/app-apollo-server/package.json
@@ -23,6 +23,8 @@
     "devDependencies": {
         "@graphql-codegen/cli": "^3.3.0",
         "@graphql-codegen/typescript": "^3.0.3",
-        "@graphql-codegen/typescript-resolvers": "^3.2.0"
+        "@graphql-codegen/typescript-resolvers": "^3.2.0",
+        "@graphql-tools/mock": "^8.7.19",
+        "@graphql-tools/schema": "^9.0.17"
     }
 }
