--- a/packages/app-apollo-server/package.json
+++ b/packages/app-apollo-server/package.json
@@ -18,7 +18,8 @@
         "@apollo/server": "^4.6.0",
         "@graphql-tools/load-files": "^6.6.1",
         "@graphql-tools/schema": "^9.0.17",
-        "graphql": "^16.6.0"
+        "graphql": "^16.6.0",
+        "graphql-scalars": "^1.21.3"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^3.3.0",
