--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "esbenp.prettier-vscode",
         "firsttris.vscode-jest-runner",
         "nrwl.angular-console",
-        "streetsidesoftware.code-spell-checker"
+        "streetsidesoftware.code-spell-checker",
+        "graphql.vscode-graphql"
     ]
 }
