--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,9 @@
         "skipDefaultLibCheck": true,
         "esModuleInterop": true,
         "baseUrl": ".",
-        "paths": {}
+        "paths": {
+            "@people-eat/server-domain": ["packages/domain/src/index.ts"]
+        }
     },
     "exclude": ["node_modules", "tmp"]
 }
