--- a/packages/app-apollo-server/package.json
+++ b/packages/app-apollo-server/package.json
@@ -18,14 +18,21 @@
         "@apollo/server": "^4.6.0",
         "@graphql-tools/load-files": "^6.6.1",
         "@graphql-tools/schema": "^9.0.17",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
         "graphql": "^16.6.0",
-        "graphql-scalars": "^1.21.3"
+        "graphql-scalars": "^1.21.3",
+        "graphql-subscriptions": "^2.0.0",
+        "graphql-ws": "^5.12.1",
+        "ws": "^8.13.0"
     },
     "devDependencies": {
         "@graphql-codegen/cli": "^3.3.0",
         "@graphql-codegen/typescript": "^3.0.3",
         "@graphql-codegen/typescript-resolvers": "^3.2.0",
         "@graphql-tools/mock": "^8.7.19",
-        "@graphql-tools/schema": "^9.0.17"
+        "@graphql-tools/schema": "^9.0.17",
+        "@types/cors": "^2.8.13"
     }
 }
