--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -10,5 +10,14 @@
     },
     "license": "UNLICENSED",
     "private": true,
-    "version": "0.0.0"
+    "version": "0.0.0",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "nanoid": "3.3.6",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/uuid": "^9.0.1"
+    }
 }
