--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
         "baseUrl": ".",
         "paths": {
             "@people-eat/server-domain": ["packages/domain/src/index.ts"],
-            "@people-eat/server-adapter-logger": ["packages/adapter-logger/src/index.ts"]
+            "@people-eat/server-adapter-logger": ["packages/adapter-logger/src/index.ts"],
+            "@people-eat/server-adapter-data-source-typeorm": ["packages/adapter-data-source-typeorm/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
