--- a/packages/adapter-data-source-typeorm/package.json
+++ b/packages/adapter-data-source-typeorm/package.json
@@ -13,6 +13,9 @@
     "version": "0.0.0",
     "dependencies": {
         "@people-eat/server-adapter-logger": "*",
-        "@people-eat/server-domain": "*"
+        "@people-eat/server-domain": "*",
+        "mysql2": "^3.2.3",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.3.15"
     }
 }
