--- a/packages/adapter-sms-twilio/package.json
+++ b/packages/adapter-sms-twilio/package.json
@@ -12,6 +12,7 @@
     "private": true,
     "version": "0.0.0",
     "dependencies": {
-        "@people-eat/server-domain": "*"
+        "@people-eat/server-domain": "*",
+        "twilio": "^4.10.0"
     }
 }
