--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,8 @@
             "@people-eat/server-domain": ["packages/domain/src/index.ts"],
             "@people-eat/server-adapter-logger": ["packages/adapter-logger/src/index.ts"],
             "@people-eat/server-adapter-data-source-typeorm": ["packages/adapter-data-source-typeorm/src/index.ts"],
-            "@people-eat/server-adapter-sms-twilio": ["packages/adapter-sms-twilio/src/index.ts"]
+            "@people-eat/server-adapter-sms-twilio": ["packages/adapter-sms-twilio/src/index.ts"],
+            "@people-eat/server-adapter-email-nodemailer": ["packages/adapter-email-nodemailer/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
