--- a/packages/adapter-email-nodemailer/package.json
+++ b/packages/adapter-email-nodemailer/package.json
@@ -12,6 +12,10 @@
     "private": true,
     "version": "0.0.0",
     "dependencies": {
-        "@people-eat/server-domain": "*"
+        "@people-eat/server-domain": "*",
+        "nodemailer": "^6.9.1"
+    },
+    "devDependencies": {
+        "@types/nodemailer": "^6.4.7"
     }
 }
