--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build:host-integration": "nx build host-integration",
         "build:host-local": "nx build host-local",
         "build:host-mock": "nx build host-mock",
+        "build:host-production": "nx build host-production",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
         "lint": "eslint . --ext js,cjs,mjs,ts,cts,mts --fix",
