--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "private": true,
     "scripts": {
         "generate:graphql": "yarn workspace @people-eat/server-app-apollo-server generate:graphql",
+        "build:host-integration": "nx build host-integration",
         "build:host-local": "nx build host-local",
         "build:host-mock": "nx build host-mock",
         "format": "prettier --write .",
