feat(app-apollo-server): setup file uploads

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@ Thumbs.db
 *.cert
 *.p8
 *.p12
+
+images/profile-pictures/*.png
+images/profile-pictures/*.jpg
+images/profile-pictures/*.jpeg
+
+images/meal-images/*.png
+images/meal-images/*.jpg
+images/meal-images/*.jpeg
