--- a/packages/app-apollo-server/graphql-codegen.yaml
+++ b/packages/app-apollo-server/graphql-codegen.yaml
@@ -7,6 +7,8 @@ generates:
     plugins:
       - 'typescript'
       - 'typescript-resolvers'
+      - add:
+          content: "import { FileUpload } from 'graphql-upload-minimal';"
     config:
       typesPrefix: GQL
       maybeValue: 'T | undefined'
@@ -21,3 +23,4 @@ generates:
         UInt: number
         Url: string
         UUID: string
+        Upload: Promise<FileUpload>
