--- a/packages/app-apollo-server/package.json
+++ b/packages/app-apollo-server/package.json
@@ -25,10 +25,12 @@
         "graphql": "^16.6.0",
         "graphql-scalars": "^1.21.3",
         "graphql-subscriptions": "^2.0.0",
+        "graphql-upload-minimal": "^1.5.4",
         "graphql-ws": "^5.12.1",
         "ws": "^8.13.0"
     },
     "devDependencies": {
+        "@graphql-codegen/add": "^5.0.0",
         "@graphql-codegen/cli": "^3.3.0",
         "@graphql-codegen/typescript": "^3.0.3",
         "@graphql-codegen/typescript-resolvers": "^3.2.0",
