--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,7 @@
             "@people-eat/server-adapter-data-source-typeorm": ["packages/adapter-data-source-typeorm/src/index.ts"],
             "@people-eat/server-adapter-sms-twilio": ["packages/adapter-sms-twilio/src/index.ts"],
             "@people-eat/server-adapter-email-nodemailer": ["packages/adapter-email-nodemailer/src/index.ts"],
+            "@people-eat/server-adapter-payment-stripe": ["packages/adapter-payment-stripe/src/index.ts"],
             "@people-eat/server-app-apollo-server": ["packages/app-apollo-server/src/index.ts"],
             "@people-eat/server-host-integration": ["packages/host-integration/src/index.ts"],
             "@people-eat/server-host-mock": ["packages/host-mock/src/index.ts"],
