--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -12,6 +12,7 @@
     "private": true,
     "version": "0.0.0",
     "dependencies": {
+        "@people-eat/server-adapter-email-template": "*",
         "bcryptjs": "^2.4.3",
         "nanoid": "3.3.6",
         "uuid": "^9.0.0"
