--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@people-eat/server-adapter-email-template": "*",
         "bcryptjs": "^2.4.3",
+        "cron": "^3.1.6",
         "nanoid": "3.3.6",
         "uuid": "^9.0.0"
     },
