--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "moment": "^2.29.4",
+        "sharp": "^0.33.4",
         "tslib": "^2.5.0"
     },
     "devDependencies": {
@@ -57,6 +58,6 @@
     ],
     "engines": {
         "node": "^20.10.0",
-        "npm": "please-use-yarn"
+        "yarn": "please-use-npm"
     }
 }
