--- a/packages/app-apollo-server/package.json
+++ b/packages/app-apollo-server/package.json
@@ -27,6 +27,7 @@
         "graphql-subscriptions": "^2.0.0",
         "graphql-upload-minimal": "^1.5.4",
         "graphql-ws": "^5.12.1",
+        "sharp": "^0.33.4",
         "ws": "^8.13.0"
     },
     "devDependencies": {
