--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@nrwl/js": "15.9.2",
         "@nrwl/node": "^15.9.2",
         "@nrwl/nx-cloud": "^15.3.5",
+        "@nrwl/nx-darwin-arm64": "^15.9.3",
         "@nrwl/workspace": "15.9.2",
         "@types/jest": "^29.4.0",
         "@types/node": "^18.15.11",
@@ -59,5 +60,11 @@
     "engines": {
         "node": "^20.10.0",
         "yarn": "please-use-npm"
+    },
+    "optionalDependencies": {
+        "@nrwl/nx-darwin-arm64": "18.0.4",
+        "@nrwl/nx-darwin-x64": "18.0.4",
+        "@nrwl/nx-linux-x64-gnu": "18.0.4",
+        "@nrwl/nx-win32-x64-msvc": "18.0.4"
     }
 }
