--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "@nrwl/nx-darwin-arm64": "^15.9.3",
         "@nrwl/workspace": "15.9.2",
         "@types/jest": "^29.4.0",
-        "@types/node": "^18.15.11",
+        "@types/node": "^22.0.0",
         "@typescript-eslint/eslint-plugin": "^5.58.0",
         "@typescript-eslint/parser": "^5.58.0",
         "cspell": "^6.31.1",
@@ -58,8 +58,9 @@
         "packages/*"
     ],
     "engines": {
-        "node": "^20.10.0",
-        "yarn": "please-use-npm"
+        "node": "^22.6.0",
+        "yarn": "please-use-npm",
+        "pnpm": "please-use-npm"
     },
     "optionalDependencies": {
         "@nrwl/nx-darwin-arm64": "18.0.4",
