--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "verify": "nx run-many -t test && nx run-many -t build && npm run format:check && npm run lint:check && npm run spell:check"
     },
     "dependencies": {
+        "klaviyo-api": "^12.0.1",
         "moment": "^2.29.4",
         "sharp": "^0.33.5",
         "tslib": "^2.5.0"
